# tcg-htc

./: .gitignore  AGENTS.md  CLAUDE.md  FORUM.md  PROTOCOL.md  SECURITY.md  pyproject.toml  system-prompt.md
.claude/: iteration_checkpoint.md
agents/: analyst.md  builder.md  deckbuilder.md  engine-developer.md  librarian.md  orchestrator.md  player.md  playtester.md  schema-critic.md  skeptic.md  steward.md  test-generator.md
data/: cards.tsv
engine/: __main__.py  _demo_deck.py  enums.py  stdio.py
memory/: analyst.md  builder.md  engine-developer.md  librarian.md  orchestrator.md  playtester.md  schema-critic.md  skeptic.md  steward.md  test-generator.md
playbook/: README.md  match_protocol.md  open-questions.md  player_spawn_prompt.md  two_agent_match.md
ref/: decklist-arakni.md  decklist-cindra.md  decklist-victor.md  fab-cube-dataset.md  strategy-cindra-redline.md  strategy-fab-fundamentals.md  talishar-card-definitions.md  talishar-engine-analysis.md
tests/: conftest.py  test_arcane_damage.py  test_combat_chain.py  test_continuous.py  test_deck_validation.py  test_equipment_degradation.py  test_game_loop.py  test_keyword_values.py  test_llm_player.py  test_overpower.py  test_phantasm.py  test_piercing.py  test_pr10_edge_cases.py  test_rupture.py  test_skeptic_fixes.py  test_spellvoid.py  test_weapon_attacks.py
tools/: agent_cli.py  auto_player.py  board_viewer.py  deck_validator.py  demo_scenario.py  log_to_html.py  match_server.py  refresh_cards.py  run_llm_game.py  scenario_recorder.py  scenario_viewer.py  snapshot.py  test_deck_validator.py  (+1 more)
(+178 files in other folders)
